2011-06-18  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Darin Adler.

        Separate concerns of loading file icons and choosing files.
        https://bugs.webkit.org/show_bug.cgi?id=62931

        * WebCoreSupport/ChromeClientEfl.cpp:
        (WebCore::ChromeClientEfl::loadIconForFiles): Renamed.
        * WebCoreSupport/ChromeClientEfl.h:

2011-06-15  Grzegorz Czajkowski  <g.czajkowski@samsung.com>

        Reviewed by Antonio Gomes.

        [EFL] Fix and update doxygen documentation for ewk_frame.
        https://bugs.webkit.org/show_bug.cgi?id=62533

        This patch:
         - fixes method descriptions,
         - adds briefs for structure and typdef,
         - replaces NULL to 0 in doxygen documentation (webkit's style required it),
         - removes dots from the end of params and return description (see EFL's documentation),
         - moves includes and defines below a brief of ewk_frame.h
         - moves internal methods to the end of ewk_frame.cpp.

        * ewk/ewk_frame.cpp:
        (ewk_frame_add):
        * ewk/ewk_frame.h:

2011-06-15  Kamil Blank  <k.blank@samsung.com>

        Reviewed by Kenneth Rohde Christiansen.

        [EFL] Soup authentication feature implementation.
        https://bugs.webkit.org/show_bug.cgi?id=54752

        This implementation is based on GTK implementation.
        During ewk initialization SoupSessionFeature is added which provides possibility to handle HTTP basic auth.

        To support authentication we have to set function (callback) via ewk_auth_show_dialog_callback_set()
        which will be responsible for session authentication.
        If callback is set and authentication required - webkit pauses soup message, calls previously set callback
        and waits for authentication data (username/password) which should be passed by ewk_auth_credentials_set().

        * CMakeListsEfl.txt:
        * ewk/ewk_auth.cpp: Added.