@@ -353,25 +353,25 @@ bool EditorClientEfl::handleEditingKeyboardEvent(KeyboardEvent* event)
             frame->selection()->modify(keyEvent->shiftKey() ? FrameSelection::AlterationExtend : FrameSelection::AlterationMove,
                     DirectionLeft,
                     keyEvent->ctrlKey() ? WordGranularity : CharacterGranularity,
-                    true);
+                    UserTriggered);
             return true;
         case VK_RIGHT:
             frame->selection()->modify(keyEvent->shiftKey() ? FrameSelection::AlterationExtend : FrameSelection::AlterationMove,
                     DirectionRight,
                     keyEvent->ctrlKey() ? WordGranularity : CharacterGranularity,
-                    true);
+                    UserTriggered);
             return true;
         case VK_UP:
             frame->selection()->modify(keyEvent->shiftKey() ? FrameSelection::AlterationExtend : FrameSelection::AlterationMove,
                     DirectionBackward,
                     keyEvent->ctrlKey() ? ParagraphGranularity : LineGranularity,
-                    true);
+                    UserTriggered);
             return true;
         case VK_DOWN:
             frame->selection()->modify(keyEvent->shiftKey() ? FrameSelection::AlterationExtend : FrameSelection::AlterationMove,
                     DirectionForward,
                     keyEvent->ctrlKey() ? ParagraphGranularity : LineGranularity,
-                    true);
+                    UserTriggered);
             return true;
         }
     }
